Add responsive mobile views and full dashboard UI
- Sidebar hidden on mobile, breadcrumbs simplified
- Table data renders as stacked cards on mobile via MobileDataCard component
- Full-width add buttons, responsive controls and form layouts
- All list pages (courses, job roles, archived) have mobile card views
- Form pages stack fields vertically on mobile
- Fix pre-existing build errors (missing deps, type issues)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "allowImportingTsExtensions": true,
     "jsx": "react-jsx",
     "incremental": true,
     "plugins": [
@@ -51,6 +52,7 @@
     ".next/dev/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "types/types"
   ]
 }
